design part almost done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,137 @@
     <title>Assignment 5</title>
 </head>
 <body>
-    
+    <!-- header start  -->
+     <header class="">
+        <!-- nav bar  -->
+         <nav class="bg-[#f9f7f3]">
+            <!-- nav div -->
+            <div class="flex justify-between items-center py-8 w-10/12 mx-auto">
+            <div>
+                <button class="btn w-28 text-black font-bold text-xl bg-primaryColor">Blog</button>
+            </div>
+            <div class="flex justify-between items-center space-x-4">
+                <img src="./assets/logo.png" alt="">
+                <h1 class="font-bold text-xl">Donate Bangladesh</h1>
+            </div>
+            <div class="flex justify-between items-center space-x-2">
+                <img src="./assets/coin.png" alt="">
+                <h1 class="font-semibold text-xl text-pText">5500</h1>
+                <h3 class="font-semibold text-xl text-pText">BDT</h3>
+            </div>
+        </div>
+            <!-- nav div -->
+             <!-- button div -->
+              <div class="bg-white py-12">
+                <div class="flex justify-center items-center gap-4">
+                    <button id="" class="btn w-36 bg-primaryColor text-black font-semibold text-xl">Donation</button> 
+                    <button id="" class="btn w-32 text-pText font-semibold text-xl bg-transparent border-pText">History</button> 
+                </div>
+              </div>
+             <!-- button div -->
+         </nav>
+        <!-- nav bar  -->
+     </header>
+    <!-- header end    -->
+
+    <!-- main start -->
+     <main class="w-9/12 mx-auto space-y-6 mb-24">
+        <!-- 1st donation box -->
+         <div class="border-[#e8e8e8] border-2 rounded-2xl p-6 lg:flex items-center justify-between gap-8 ">
+            <div>
+                <img class=" w-full h-full" src="./assets/noakhali.png" alt="">
+            </div>
+            <div class=" mt-8 lg:w-1/2 lg:mt-0">
+                <!-- button div -->
+                <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
+                   <img src="./assets/coin.png" alt="">
+                   <h1 class="font-semibold text-xl text-pText">0</h1>
+                   <h3 class="font-semibold text-xl text-pText">BDT</h3>
+                </div>
+                <!-- button div -->
+                <!-- text div -->
+                <div class="my-4">
+                    <h1 class="text-mainText text-xl font-bold mb-4">Donate for Flood at Noakhali, Bangladesh</h1>
+                    <p class="text-pText "> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
+                </div>
+                <!-- text div -->
+                <!-- input div -->
+                 <div class="mt-6 space-y-4">
+                    <input type="text" name="" id="" placeholder="Write Donation Amount" class="w-full input input-bordered">
+                    <button id="" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                 </div>
+                <!-- input div -->
+
+            </div>
+         </div>
+        <!-- 1st donation box -->
+
+        <!-- 2nd donation box -->
+        <div class="border-[#e8e8e8] border-2 rounded-2xl p-6 lg:flex items-center justify-between gap-8 ">
+            <div>
+                <img class=" w-full h-full" src="./assets/feni.png" alt="">
+            </div>
+            <div class=" mt-8 lg:w-1/2 lg:mt-0">
+                <!-- button div -->
+                <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
+                   <img src="./assets/coin.png" alt="">
+                   <h1 class="font-semibold text-xl text-pText">600</h1>
+                   <h3 class="font-semibold text-xl text-pText">BDT</h3>
+                </div>
+                <!-- button div -->
+                <!-- text div -->
+                <div class="my-4">
+                    <h1 class="text-mainText text-xl font-bold mb-4">Donate for Flood Relief in Feni,Bangladesh</h1>
+                    <p class="text-pText ">The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
+                </div>
+                <!-- text div -->
+                <!-- input div -->
+                 <div class="mt-6 space-y-4">
+                    <input type="text" name="" id="" placeholder="Write Donation Amount" class="w-full input input-bordered">
+                    <button id="" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                 </div>
+                <!-- input div -->
+
+            </div>
+        </div>
+        <!-- 2nd donation box -->
+
+        <!-- 3rd donation box -->
+        <div class="border-[#e8e8e8] border-2 rounded-2xl p-6 lg:flex items-center justify-between gap-8 ">
+            <div>
+                <img class=" w-full h-full" src="./assets/quota-protest.png" alt="">
+            </div>
+            <div class=" mt-8 lg:w-1/2 lg:mt-0">
+                <!-- button div -->
+                <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
+                   <img src="./assets/coin.png" alt="">
+                   <h1 class="font-semibold text-xl text-pText">2400</h1>
+                   <h3 class="font-semibold text-xl text-pText">BDT</h3>
+                </div>
+                <!-- button div -->
+                <!-- text div -->
+                <div class="my-4">
+                    <h1 class="text-mainText text-xl font-bold mb-4">Aid for Injured in the Quota Movement</h1>
+                    <p class="text-pText ">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
+                </div>
+                <!-- text div -->
+                <!-- input div -->
+                 <div class="mt-6 space-y-4">
+                    <input type="text" name="" id="" placeholder="Write Donation Amount" class="w-full input input-bordered">
+                    <button id="" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                 </div>
+                <!-- input div -->
+
+            </div>
+        </div>
+        <!-- 3rd donation box -->
+     </main>
+    <!-- main end   -->
+    <!-- footer -->
+     <footer class="bg-[#f9f7f3] py-16"></footer>
+    <!-- footer -->
+
+
 
     <!-- all js file  -->
      <script src="js/index.js"></script>
