--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 </head>
 <body>
     <!-- header start  -->
-     <header class="">
+     <header class="sticky top-0">
         <!-- nav bar  -->
          <nav class="bg-[#f9f7f3]">
             <!-- nav div -->
             <div class="flex justify-between items-center py-8 w-10/12 mx-auto">
             <div>
-                <button class="btn w-28 text-black font-bold text-xl bg-primaryColor">Blog</button>
+                <button id="blog-btn" class=" btn w-28 text-black font-bold text-xl bg-primaryColor"><a href="blog.html">Blog</a></button>
             </div>
             <div class="flex justify-between items-center space-x-4">
                 <img src="./assets/logo.png" alt="">
@@ -47,8 +47,8 @@
              <!-- button div -->
               <div class="bg-white py-12">
                 <div class="flex justify-center items-center gap-4">
-                    <button id="" class="btn w-36 bg-primaryColor text-black font-semibold text-xl">Donation</button> 
-                    <button id="" class="btn w-32 text-pText font-semibold text-xl bg-transparent border-pText">History</button> 
+                    <button id="donate-btn" class="btn w-36 bg-transparent text-pText border-pText text-black font-semibold text-xl">Donation</button> 
+                    <button id="history-btn" class="btn w-32 text-pText font-semibold text-xl bg-transparent border-pText">History</button> 
                 </div>
               </div>
              <!-- button div -->
@@ -59,6 +59,8 @@
 
     <!-- main start -->
      <main class="w-9/12 mx-auto space-y-6 mb-24">
+        <!-- donation box  -->
+         <div id="donation-box">
         <!-- 1st donation box -->
          <div class="border-[#e8e8e8] border-2 rounded-2xl p-6 lg:flex items-center justify-between gap-8 ">
             <div>
@@ -68,7 +70,7 @@
                 <!-- button div -->
                 <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
                    <img src="./assets/coin.png" alt="">
-                   <h1 class="font-semibold text-xl text-pText">0</h1>
+                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">0</h1>
                    <h3 class="font-semibold text-xl text-pText">BDT</h3>
                 </div>
                 <!-- button div -->
@@ -80,8 +82,8 @@
                 <!-- text div -->
                 <!-- input div -->
                  <div class="mt-6 space-y-4">
-                    <input type="text" name="" id="" placeholder="Write Donation Amount" class="w-full input input-bordered">
-                    <button id="" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                    <input type="text" name="" id="donate-input" placeholder="Write Donation Amount" class="w-full input input-bordered">
+                    <button id="donate-btn" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
                  </div>
                 <!-- input div -->
 
@@ -148,6 +150,14 @@
             </div>
         </div>
         <!-- 3rd donation box -->
+       </div>
+        <!-- donation box  -->
+
+        <!-- history box -->
+         <div id="history-box" class="h-[500px] bg-red-200 hidden">
+
+         </div>
+        <!-- history box -->
      </main>
     <!-- main end   -->
     <!-- footer -->
