homeToBlog & blogToHome added

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
             <!-- nav div -->
             <div class="flex justify-between items-center py-8 w-10/12 mx-auto">
             <div>
-                <button id="home-btn" class="btn w-28 text-black font-bold text-xl bg-primaryColor"><a href="index.html">Home</a></button>
+                <button id="home-btn" class="btn w-28 text-black font-bold text-xl bg-primaryColor">Home</button>
             </div>
             <div class="flex justify-between items-center space-x-4">
                 <img src="./assets/logo.png" alt="">
@@ -96,5 +96,6 @@
          </div>
         <!-- main div -->
     </main>
+    <script src="js/blogToHome.js"></script>
 </body>
 </html>
