--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- nav div -->
             <div class="flex justify-between items-center py-8 w-10/12 mx-auto">
             <div>
-                <button id="blog-btn" class=" btn w-28 text-black font-bold text-xl bg-primaryColor"><a href="blog.html">Blog</a></button>
+                <button id="blog-btn" class=" btn w-28 text-black font-bold text-xl bg-primaryColor">Blog</button>
             </div>
             <div class="flex justify-between items-center space-x-4">
                 <img src="./assets/logo.png" alt="">
@@ -168,6 +168,7 @@
 
     <!-- all js file  -->
      <script src="js/index.js"></script>
+     <script src="js/homeToBlog.js"></script>
     <!-- all js file  -->
 </body>
 </html>
