some js function added

--- a/blog.html
+++ b/blog.html
@@ -29,15 +29,15 @@
         <!-- nav bar  -->
          <nav class="bg-[#f9f7f3]">
             <!-- nav div -->
-            <div class="flex justify-between items-center py-8 w-10/12 mx-auto">
+            <div class="space-y-6 sm:flex justify-between items-center py-8 w-10/12 mx-auto max-w-screen-xl">
             <div>
                 <button id="home-btn" class="btn w-28 text-black font-bold text-xl bg-primaryColor">Home</button>
             </div>
-            <div class="flex justify-between items-center space-x-4">
+            <div class=" sm:justify-between flex items-center space-x-4">
                 <img src="./assets/logo.png" alt="">
                 <h1 class="font-bold text-xl">Donate Bangladesh</h1>
             </div>
-            <div class="flex justify-between items-center space-x-2">
+            <div class=" sm:justify-between flex items-center space-x-2">
                 <img src="./assets/coin.png" alt="">
                 <h1 class="font-semibold text-xl text-pText">5500</h1>
                 <h3 class="font-semibold text-xl text-pText">BDT</h3>
@@ -49,9 +49,9 @@
      </header>
     <!-- header end    -->
 
-    <main class="w-9/12 mx-auto">
+    <main class="w-9/12 mx-auto max-w-screen-xl">
         <!-- main div -->
-         <div class="py-12">
+         <div class="pt-12 pb-24">
             <div class="my-6">
                 <h1 class="text-3xl text-mainText font-bold">Important FAQ </h1>
             </div>
@@ -93,7 +93,7 @@
                   </div>
                 </div>
               </div>
-         </div>
+              <div>
         <!-- main div -->
     </main>
     <script src="js/blogToHome.js"></script>
