--- a/index.html
+++ b/index.html
@@ -27,42 +27,43 @@
     <!-- header start  -->
      <header class="sticky top-0">
         <!-- nav bar  -->
-         <nav class="bg-[#f9f7f3]">
+         <nav class="bg-[#f9f7f3] backdrop-blur-xl bg-opacity-80 " >
             <!-- nav div -->
-            <div class="flex justify-between items-center py-8 w-10/12 mx-auto">
+            <div class="space-y-4 sm:flex justify-between items-center py-8 w-10/12 mx-auto max-w-screen-xl">
             <div>
                 <button id="blog-btn" class=" btn w-28 text-black font-bold text-xl bg-primaryColor">Blog</button>
             </div>
-            <div class="flex justify-between items-center space-x-4">
+            <div class="sm:justify-between flex items-center space-x-4">
                 <img src="./assets/logo.png" alt="">
                 <h1 class="font-bold text-xl">Donate Bangladesh</h1>
             </div>
-            <div class="flex justify-between items-center space-x-2">
+            <div class="sm:justify-between flex items-center space-x-2">
                 <img src="./assets/coin.png" alt="">
-                <h1 class="font-semibold text-xl text-pText">5500</h1>
+                <h1 id="coin-donate-amount" class="font-semibold text-xl text-pText">5500</h1>
                 <h3 class="font-semibold text-xl text-pText">BDT</h3>
             </div>
         </div>
             <!-- nav div -->
-             <!-- button div -->
-              <div class="bg-white py-12">
-                <div class="flex justify-center items-center gap-4">
-                    <button id="donate-btn" class="btn w-36 bg-transparent text-pText border-pText text-black font-semibold text-xl">Donation</button> 
-                    <button id="history-btn" class="btn w-32 text-pText font-semibold text-xl bg-transparent border-pText">History</button> 
-                </div>
-              </div>
-             <!-- button div -->
+             
          </nav>
+        <!-- button div -->
+            <div class="pt-12 pb-8 backdrop-blur-xl bg-opacity-80">
+              <div class="flex justify-center items-center gap-4">
+                  <button id="donate-btn" class="btn w-36 bg-primaryColor font-semibold text-xl">Donation</button> 
+                  <button id="history-btn" class="btn w-32 text-pText font-semibold text-xl bg-transparent border-pText">History</button> 
+              </div>
+            </div>
+        <!-- button div -->
         <!-- nav bar  -->
      </header>
     <!-- header end    -->
 
     <!-- main start -->
-     <main class="w-9/12 mx-auto space-y-6 mb-24">
+     <main class="w-10/12 md:w-9/12 mx-auto max-w-screen-xl mb-24">
         <!-- donation box  -->
-         <div id="donation-box">
+         <div id="donation-box" class="space-y-6">
         <!-- 1st donation box -->
-         <div class="border-[#e8e8e8] border-2 rounded-2xl p-6 lg:flex items-center justify-between gap-8 ">
+        <div class="border-[#e8e8e8] border-2 rounded-2xl p-6 lg:flex items-center justify-between gap-8 ">
             <div>
                 <img class=" w-full h-full" src="./assets/noakhali.png" alt="">
             </div>
@@ -70,7 +71,7 @@
                 <!-- button div -->
                 <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
                    <img src="./assets/coin.png" alt="">
-                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">0</h1>
+                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">500</h1>
                    <h3 class="font-semibold text-xl text-pText">BDT</h3>
                 </div>
                 <!-- button div -->
@@ -83,12 +84,29 @@
                 <!-- input div -->
                  <div class="mt-6 space-y-4">
                     <input type="text" name="" id="donate-input" placeholder="Write Donation Amount" class="w-full input input-bordered">
-                    <button id="donate-btn" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                    <button onclick="my_modal_1.showModal()" id="donation-btn" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                    <!-- Open the modal using ID.showModal() method -->
+                    <dialog id="my_modal_1" class="modal">
+                      <div class="modal-box">
+                        <div class="text-center space-y-3">
+                            <h1 class="text-3xl text-mainText font-bold">Congrates!</h1>
+                            <img class="mx-auto" src="./assets/coin.png" alt="">
+                            <h3>You Have Donated For Humankind</h3>
+                            <h3 class="text-mainText font-bold">Successfully</h3>
+                        </div>
+                        <div class="modal-action">
+                          <form method="dialog" class="mx-auto">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn ">close confirmation</button>
+                          </form>
+                        </div>
+                      </div>
+                    </dialog>
                  </div>
                 <!-- input div -->
 
             </div>
-         </div>
+        </div>
         <!-- 1st donation box -->
 
         <!-- 2nd donation box -->
@@ -100,7 +118,7 @@
                 <!-- button div -->
                 <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
                    <img src="./assets/coin.png" alt="">
-                   <h1 class="font-semibold text-xl text-pText">600</h1>
+                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">600</h1>
                    <h3 class="font-semibold text-xl text-pText">BDT</h3>
                 </div>
                 <!-- button div -->
@@ -112,8 +130,25 @@
                 <!-- text div -->
                 <!-- input div -->
                  <div class="mt-6 space-y-4">
-                    <input type="text" name="" id="" placeholder="Write Donation Amount" class="w-full input input-bordered">
-                    <button id="" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                    <input type="number" name="" id="donate-input" placeholder="Write Donation Amount" class="w-full input input-bordered">
+                    <button onclick="my_modal_2.showModal()" id="donation-btn2" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                    <!-- Open the modal using ID.showModal() method -->
+                    <dialog id="my_modal_2" class="modal">
+                      <div class="modal-box">
+                        <div class="text-center space-y-3">
+                            <h1 class="text-3xl text-mainText font-bold">Congrates!</h1>
+                            <img class="mx-auto" src="./assets/coin.png" alt="">
+                            <h3>You Have Donated For Humankind</h3>
+                            <h3 class="text-mainText font-bold">Successfully</h3>
+                        </div>
+                        <div class="modal-action">
+                          <form method="dialog" class="mx-auto">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn ">close confirmation</button>
+                          </form>
+                        </div>
+                      </div>
+                    </dialog>
                  </div>
                 <!-- input div -->
 
@@ -130,7 +165,7 @@
                 <!-- button div -->
                 <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
                    <img src="./assets/coin.png" alt="">
-                   <h1 class="font-semibold text-xl text-pText">2400</h1>
+                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">2400</h1>
                    <h3 class="font-semibold text-xl text-pText">BDT</h3>
                 </div>
                 <!-- button div -->
@@ -142,19 +177,36 @@
                 <!-- text div -->
                 <!-- input div -->
                  <div class="mt-6 space-y-4">
-                    <input type="text" name="" id="" placeholder="Write Donation Amount" class="w-full input input-bordered">
-                    <button id="" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                    <input type="number" name="" id="donate-input" placeholder="Write Donation Amount" class="w-full input input-bordered">
+                    <button onclick="my_modal_3.showModal()" id="donation-btn3" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
+                    <!-- Open the modal using ID.showModal() method -->
+                    <dialog id="my_modal_3" class="modal">
+                      <div class="modal-box">
+                        <div class="text-center space-y-3">
+                            <h1 class="text-3xl text-mainText font-bold">Congrates!</h1>
+                            <img class="mx-auto" src="./assets/coin.png" alt="">
+                            <h3>You Have Donated For Humankind</h3>
+                            <h3 class="text-mainText font-bold">Successfully</h3>
+                        </div>
+                        <div class="modal-action">
+                          <form method="dialog" class="mx-auto">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn ">close confirmation</button>
+                          </form>
+                        </div>
+                      </div>
+                    </dialog>
                  </div>
                 <!-- input div -->
 
             </div>
         </div>
         <!-- 3rd donation box -->
-       </div>
+         </div>
         <!-- donation box  -->
 
         <!-- history box -->
-         <div id="history-box" class="h-[500px] bg-red-200 hidden">
+         <div id="history-box" class="h-[500px] bg-slate-100 hidden">
 
          </div>
         <!-- history box -->
@@ -168,6 +220,7 @@
 
     <!-- all js file  -->
      <script src="js/index.js"></script>
+     <script src="js/script.js"></script>
      <script src="js/homeToBlog.js"></script>
     <!-- all js file  -->
 </body>
