history section done

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <!-- button div -->
             <div class="pt-12 pb-8 backdrop-blur-xl bg-opacity-80">
               <div class="flex justify-center items-center gap-4">
-                  <button id="donate-btn" class="btn w-36 bg-primaryColor font-semibold text-xl">Donation</button> 
-                  <button id="history-btn" class="btn w-32 text-pText font-semibold text-xl bg-transparent border-pText">History</button> 
+                  <button  id="donate-btn"  class="btn w-36 bg-slate-100 font-semibold text-xl">Donation</button> 
+                  <button id="history-btn" class="btn w-32 text-pText font-semibold text-xl bg-slate-100 ">History</button> 
               </div>
             </div>
         <!-- button div -->
@@ -77,8 +77,8 @@
                 <!-- button div -->
                 <!-- text div -->
                 <div class="my-4">
-                    <h1 class="text-mainText text-xl font-bold mb-4">Donate for Flood at Noakhali, Bangladesh</h1>
-                    <p class="text-pText "> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
+                    <h1 class="text-mainText text-xl font-bold mb-4" id="donation-subject">Donate for Flood at Noakhali, Bangladesh</h1>
+                    <p class="text-pText " > The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
                 </div>
                 <!-- text div -->
                 <!-- input div -->
@@ -206,14 +206,14 @@
         <!-- donation box  -->
 
         <!-- history box -->
-         <div id="history-box" class="h-[500px] bg-slate-100 hidden">
+         <div id="history-box" class=" pt-6 hidden space-y-4 md:w-10/12 mx-auto">
 
          </div>
         <!-- history box -->
      </main>
     <!-- main end   -->
     <!-- footer -->
-     <footer class="bg-[#f9f7f3] py-16"></footer>
+     <footer class="bg-[#f9f7f3] py-16 "></footer>
     <!-- footer -->
 
 
