button color active

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- header start  -->
      <header class="sticky top-0">
         <!-- nav bar  -->
-         <nav class="bg-[#f9f7f3] backdrop-blur-xl bg-opacity-80 " >
+         <nav class="bg-[#fdf7ec] backdrop-blur-xl bg-opacity-80 " >
             <!-- nav div -->
             <div class="space-y-4 sm:flex justify-between items-center py-8 w-10/12 mx-auto max-w-screen-xl">
             <div>
@@ -47,10 +47,10 @@
              
          </nav>
         <!-- button div -->
-            <div class="pt-12 pb-8 backdrop-blur-xl bg-opacity-80">
+            <div class="pt-12 pb-4 backdrop-blur-xl bg-opacity-80">
               <div class="flex justify-center items-center gap-4">
-                  <button  id="donate-btn"  class="btn w-36 bg-slate-100 font-semibold text-xl">Donation</button> 
-                  <button id="history-btn" class="btn w-32 text-pText font-semibold text-xl bg-slate-100 ">History</button> 
+                  <button  id="donate-btn"  class="btn w-36 font-semibold text-xl">Donation</button> 
+                  <button id="history-btn" class="btn w-32  font-semibold text-xl ">History</button> 
               </div>
             </div>
         <!-- button div -->
@@ -61,7 +61,7 @@
     <!-- main start -->
      <main class="w-10/12 md:w-9/12 mx-auto max-w-screen-xl mb-24">
         <!-- donation box  -->
-         <div id="donation-box" class="space-y-6">
+         <div id="donation-box" class="space-y-6 mt-12">
         <!-- 1st donation box -->
         <div class="border-[#e8e8e8] border-2 rounded-2xl p-6 lg:flex items-center justify-between gap-8 ">
             <div>
@@ -118,19 +118,19 @@
                 <!-- button div -->
                 <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
                    <img src="./assets/coin.png" alt="">
-                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">600</h1>
+                   <h1 id="donate-balance2" class="font-semibold text-xl text-pText">500</h1>
                    <h3 class="font-semibold text-xl text-pText">BDT</h3>
                 </div>
                 <!-- button div -->
                 <!-- text div -->
                 <div class="my-4">
-                    <h1 class="text-mainText text-xl font-bold mb-4">Donate for Flood Relief in Feni,Bangladesh</h1>
+                    <h1 class="text-mainText text-xl font-bold mb-4" id="donation-subject2">Donate for Flood Relief in Feni,Bangladesh</h1>
                     <p class="text-pText ">The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
                 </div>
                 <!-- text div -->
                 <!-- input div -->
                  <div class="mt-6 space-y-4">
-                    <input type="number" name="" id="donate-input" placeholder="Write Donation Amount" class="w-full input input-bordered">
+                    <input type="text" name="" id="donate-input2" placeholder="Write Donation Amount" class="w-full input input-bordered">
                     <button onclick="my_modal_2.showModal()" id="donation-btn2" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
                     <!-- Open the modal using ID.showModal() method -->
                     <dialog id="my_modal_2" class="modal">
@@ -165,7 +165,7 @@
                 <!-- button div -->
                 <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
                    <img src="./assets/coin.png" alt="">
-                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">2400</h1>
+                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">500</h1>
                    <h3 class="font-semibold text-xl text-pText">BDT</h3>
                 </div>
                 <!-- button div -->
