--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- button div -->
             <div class="pt-12 pb-4 backdrop-blur-xl bg-opacity-80">
               <div class="flex justify-center items-center gap-4">
-                  <button  id="donate-btn"  class="btn w-36 font-semibold text-xl">Donation</button> 
+                  <button  id="donate-btn"  class="btn w-36 bg-[#B4F461] font-semibold text-xl">Donation</button> 
                   <button id="history-btn" class="btn w-32  font-semibold text-xl ">History</button> 
               </div>
             </div>
