3 donation input function done

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
         <!-- nav bar  -->
          <nav class="bg-[#f9f7f3]">
             <!-- nav div -->
-            <div class="space-y-6 sm:flex justify-between items-center py-8 w-10/12 mx-auto max-w-screen-xl">
+            <div class="space-y-4 py-4 sm:flex md:py-8 justify-between items-center  w-10/12 mx-auto max-w-screen-xl">
             <div>
                 <button id="home-btn" class="btn w-28 text-black font-bold text-xl bg-primaryColor">Home</button>
             </div>
