--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- nav bar  -->
          <nav class="bg-[#fdf7ec] backdrop-blur-xl bg-opacity-80 " >
             <!-- nav div -->
-            <div class="space-y-4 sm:flex justify-between items-center py-8 w-10/12 mx-auto max-w-screen-xl">
+            <div class="space-y-4 py-3 sm:flex md:py-8 justify-between items-center w-10/12 mx-auto max-w-screen-xl">
             <div>
                 <button id="blog-btn" class=" btn w-28 text-black font-bold text-xl bg-primaryColor">Blog</button>
             </div>
@@ -47,7 +47,7 @@
              
          </nav>
         <!-- button div -->
-            <div class="pt-12 pb-4 backdrop-blur-xl bg-opacity-80">
+            <div class="py-2 md:pt-12 md:pb-4 backdrop-blur-xl bg-opacity-80">
               <div class="flex justify-center items-center gap-4">
                   <button  id="donate-btn"  class="btn w-36 bg-[#B4F461] font-semibold text-xl">Donation</button> 
                   <button id="history-btn" class="btn w-32  font-semibold text-xl ">History</button> 
@@ -77,7 +77,7 @@
                 <!-- button div -->
                 <!-- text div -->
                 <div class="my-4">
-                    <h1 class="text-mainText text-xl font-bold mb-4" id="donation-subject">Donate for Flood at Noakhali, Bangladesh</h1>
+                    <h1 class="text-mainText text-xl font-bold mb-4" >Donate for <span id="donation-subject">Flood at Noakhali, Bangladesh</span></h1>
                     <p class="text-pText " > The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
                 </div>
                 <!-- text div -->
@@ -124,7 +124,7 @@
                 <!-- button div -->
                 <!-- text div -->
                 <div class="my-4">
-                    <h1 class="text-mainText text-xl font-bold mb-4" id="donation-subject2">Donate for Flood Relief in Feni,Bangladesh</h1>
+                    <h1 class="text-mainText text-xl font-bold mb-4" >Donate for <span id="donation-subject2">Flood Relief in Feni, Bangladesh</span></h1>
                     <p class="text-pText ">The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
                 </div>
                 <!-- text div -->
@@ -165,19 +165,19 @@
                 <!-- button div -->
                 <div class="flex w-fit items-center space-x-2 bg-[#f3f3f3] py-3 px-6 rounded-xl">
                    <img src="./assets/coin.png" alt="">
-                   <h1 id="donate-balance" class="font-semibold text-xl text-pText">500</h1>
+                   <h1 id="donate-balance3" class="font-semibold text-xl text-pText">500</h1>
                    <h3 class="font-semibold text-xl text-pText">BDT</h3>
                 </div>
                 <!-- button div -->
                 <!-- text div -->
                 <div class="my-4">
-                    <h1 class="text-mainText text-xl font-bold mb-4">Aid for Injured in the Quota Movement</h1>
+                    <h1 class="text-mainText text-xl font-bold mb-4" ><span id="donation-subject3">Aid for Injured in the Quota Movement , Bangladesh</span></h1>
                     <p class="text-pText ">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
                 </div>
                 <!-- text div -->
                 <!-- input div -->
                  <div class="mt-6 space-y-4">
-                    <input type="number" name="" id="donate-input" placeholder="Write Donation Amount" class="w-full input input-bordered">
+                    <input type="text" name="" id="donate-input3" placeholder="Write Donation Amount" class="w-full input input-bordered">
                     <button onclick="my_modal_3.showModal()" id="donation-btn3" class=" btn w-full bg-primaryColor text-black font-semibold text-xl">Donate Now</button> 
                     <!-- Open the modal using ID.showModal() method -->
                     <dialog id="my_modal_3" class="modal">
