again some changes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- main start -->
      <main class="w-10/12 md:w-9/12 mx-auto max-w-screen-xl mb-24">
         <!-- donation box  -->
-         <div id="donation-box" class="space-y-6 mt-12">
+        <div id="donation-box" class="space-y-6 mt-12">
         <!-- 1st donation box -->
         <div class="border-[#e8e8e8] border-2 rounded-2xl p-6 lg:flex items-center justify-between gap-8 ">
             <div>
@@ -206,7 +206,7 @@
         <!-- donation box  -->
 
         <!-- history box -->
-         <div id="history-box" class=" pt-6 hidden space-y-4 md:w-10/12 mx-auto">
+         <div id="history-box" class="h-[800px] overflow-y-auto pt-6 hidden space-y-4 md:w-10/12 mx-auto">
 
          </div>
         <!-- history box -->
