--- a/blog.html
+++ b/blog.html
@@ -27,9 +27,9 @@
     <!-- header start  -->
     <header class="">
         <!-- nav bar  -->
-         <nav class="bg-[#f9f7f3]">
-            <!-- nav div -->
-            <div class="space-y-4 py-4 sm:flex md:py-8 justify-between items-center  w-10/12 mx-auto max-w-screen-xl">
+         <nav class="bg-[#fdf7ec]">
+          <!-- nav div -->
+            <div class="space-y-4 py-4 sm:flex md:py-6 justify-between items-center  w-10/12 mx-auto max-w-screen-xl">
             <div>
                 <button id="home-btn" class="btn w-28 text-black font-bold text-xl bg-primaryColor">Home</button>
             </div>
@@ -42,7 +42,7 @@
                 <h1 class="font-semibold text-xl text-pText">5500</h1>
                 <h3 class="font-semibold text-xl text-pText">BDT</h3>
             </div>
-        </div>
+            </div>
         <!-- nav div -->
          </nav>
         <!-- nav bar  -->
@@ -56,14 +56,14 @@
                 <h1 class="text-3xl text-mainText font-bold">Important FAQ </h1>
             </div>
             <div class="join join-vertical w-full">
-                <div class="collapse collapse-arrow join-item border-base-300 border py-4">
+                <div class="collapse collapse-arrow join-item border-base-300 border py-4 px-4">
                   <input type="radio" name="my-accordion-4" checked="checked" />
                   <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
-                  <div class="collapse-content">
-                    <p>The Document Object Model is a cross-platform and language-independent interface that treats an HTML or XML document as a tree structure wherein each node is an object representing a part of the document. The DOM represents a document with a logical tree.</p>
+                  <div class="collapse-content md:w-5/6">
+                    <p>The DOM is a tree-like structure of a web page that lets JavaScript access and manipulate HTML elements . The DOM represents a document with a logical tree.</p>
                   </div>
                 </div>
-                <div class="collapse collapse-arrow join-item border-base-300 border py-4">
+                <div class="collapse collapse-arrow join-item border-base-300 border py-4 px-4">
                   <input type="radio" name="my-accordion-4" />
                   <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
                   <div class="collapse-content">
@@ -77,23 +77,24 @@
                     </ul>
                   </div>
                 </div>
-                <div class="collapse collapse-arrow join-item border-base-300 border py-4">
+                <div class="collapse collapse-arrow join-item border-base-300 border py-4 px-4">
                   <input type="radio" name="my-accordion-4" />
                   <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why is it useful?</div>
-                  <div class="collapse-content">
-                    <p>Event delegation refers to the process of using event propagation (bubbling) to handle events at a higher level in the DOM than the element on which the event originated. It allows us to attach a single event listener for elements that exist now or in the future.</p>
+                  <div class="collapse-content md:w-5/6">
+                    <p>
+                      Event delegation is a technique in the DOM where a single event listener is added to a parent element to handle events for its child elements. It’s useful because it reduces the number of event listeners and efficiently handles dynamically added elements.</p>
                   </div>
                 </div>
-                <div class="collapse collapse-arrow join-item border-base-300 border py-4">
+                <div class="collapse collapse-arrow join-item border-base-300 border py-4 px-4">
                   <input type="radio" name="my-accordion-4" />
                   <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles using the DOM?</div>
-                  <div class="collapse-content">
+                  <div class="collapse-content md:w-5/6">
                     <p>Manipulating Element Attributes
                         If you want to change other attributes like id , href , or src , you can use the setAttribute() method. The setAttribute() method accepts two arguments: The name of the attribute to set. The value of the attribute to set.</p>
                   </div>
                 </div>
               </div>
-              <div>
+         <div>
         <!-- main div -->
     </main>
     <script src="js/blogToHome.js"></script>
