--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
         <!-- donation box  -->
 
         <!-- history box -->
-         <div id="history-box" class="h-[800px] overflow-y-auto pt-6 hidden space-y-4 md:w-10/12 mx-auto">
+         <div id="history-box" class="pt-6 hidden space-y-4 md:w-10/12 mx-auto">
 
          </div>
         <!-- history box -->
      </main>
     <!-- main end   -->
     <!-- footer -->
-     <footer class="bg-[#f9f7f3] py-16 "></footer>
+     <footer id="footer" class="bg-[#fdf7ec] py-16 "></footer>
     <!-- footer -->
 
 
